# learningWork

./: .gitIgnore
chatServer/: .gitIgnore  CMakeLists.txt  chatServer  chatServer.cpp  chatServer.hpp  main  main.cpp
chatServer/src/client/: client.cpp  client.hpp  main.cpp
chatServer/src/server/: chatServer.cpp  chatServer.hpp  main.cpp
llmChatGroup/: .gitignore  CMakeLists.txt  README.md
llmChatGroup/memory/: prompt.md
llmChatGroup/src/chatServer/: history.cpp  history.hpp  llamaModel.cpp  llamaModel.hpp  main.cpp  server.cpp  server.hpp
llmChatGroup/src/client/: client.cpp  client.hpp  main.cpp
threadPool/: main  main.cpp  threadPool.cpp  threadPool.hpp
